--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chalk": "^3.0.0",
     "commander": "^4.0.1",
     "glob": "^7.1.6",
+    "plotly": "^1.0.6",
     "text-miner": "^1.3.0"
   }
 }
